- Updated appearance of 'collapse-all' and 'expand-all' [Icons](https://design.avayacloud.com/components/icons/) - Tweaked padding on checked state of [Checkboxes](https://design.avayacloud.com/components/web/checkbox-web) to avoid unintended position shift - Added property to prevent unintended margin on read-only text in [Dropdown](https://design.avayacloud.com/components/web/dropdown-web) Components - Added property to expand width of inputs in [Dropdown](https://design.avayacloud.com/components/web/dropdown-web) Components

--- a/neo/scss-update/elements/_check.scss
+++ b/neo/scss-update/elements/_check.scss
@@ -88,7 +88,7 @@
     content: $checkbox-checked-icon;
     font-size: $checkbox-icon-font-size;
     color: $checkbox-color;
-    padding-left: 2px;
+    padding-left: 1px;
     padding-right: 2px;
     // transition: $global-hover-transition;
   }
